added form for creating ideas

--- a/app/templates/ideas.hbs
+++ b/app/templates/ideas.hbs
@@ -1,5 +1,16 @@
 <h3> These are your ideas: </h3>
 
+<section id="new-idea">
+  <h2>Add a New Idea</h2>
+  <form class="new-idea-form">
+    <label>Title</label>
+    {{input type="text" placeholder="Title" class="new-idea-title" value=title}}
+    <label>Body</label>
+    {{input type="text" placeholder="Body" class="new-idea-body" value=body}}
+    <input type="submit" value="Submit Your Great Idea" {{action 'addNewIdea'}}>
+  </form>
+</section>
+
 <section id="ideas">
   {{#each model as |idea|}}
     <div class='idea'>
