added a destroy function through components

--- a/app/templates/components/awesome-idea.hbs
+++ b/app/templates/components/awesome-idea.hbs
@@ -1,1 +1,5 @@
-{{yield}}
+<div class='idea'>
+  <h4>{{idea.title}}</h4>
+  <p>{{idea.body}}</p>
+  <button {{action 'deleteIdea'}}> Bad Idea (Delete)</button>
+</div>
