--- a/app/templates/ideas.hbs
+++ b/app/templates/ideas.hbs
@@ -13,11 +13,9 @@
 
 <section id="ideas">
   {{#each model as |idea|}}
-    <div class='idea'>
-      <h4>{{idea.title}}</h4>
-      <p>{{idea.body}}</p>
-    </div>
+    {{awesome-idea idea=idea}}
   {{/each}}
 </section>
 
 {{outlet}}
+
