--- a/app/templates/components/awesome-idea.hbs
+++ b/app/templates/components/awesome-idea.hbs
@@ -1,5 +1,16 @@
-<div class='idea'>
-  <h4>{{idea.title}}</h4>
+<div class="idea">
+  <h2>{{idea.title}}{{if idea.isDirty '*'}}</h2>
   <p>{{idea.body}}</p>
-  <button {{action 'deleteIdea'}}> Bad Idea (Delete)</button>
+  <div class="buttons">
+    <button class="edit" {{action 'edit'}}>Edit</button>
+    <button class="delete" {{action 'delete'}}>Delete</button>
+    {{#if editing}}
+    <form class="edit-idea-form">
+      <label>Title</label>
+      {{input type="text" placeholder="Title" class="idea-title" value=idea.title}}
+      <label>Body</label>
+      {{input type="text" placeholder="Body" class="idea-body" value=idea.body}}
+    </form>
+    {{/if}}
+  </div>
 </div>
